--- a/app.html
+++ b/app.html
@@ -10,6 +10,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<!-- ----Google Font---- -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 
     <link href="css/site.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
@@ -21,7 +25,7 @@
     <!-- ----Nav Section ---- -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/MDfull.png" height="30"
+            <a class="navbar-brand logoFont" href="#"><img src="img/MDfull.png" height="30"
                     class="d-inline-block align-text-top"> POURCENT</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,8 +56,26 @@
     <!-- ----Main Section ---- -->
     <main class="flex-shrink-0">
         <div class="container">
+            <div class="row row-cols-1 ro-cols-lg-2">
+                <div class="col-lg-4 col">
+                    <h2>POURCENT: A Coding Project</h2>
+                    <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops.
+                        Write a program the displays numbers from 0 to 100. Disply the even number in<strong>
+                            BOLD.</strong></h4>
+                            <h2 class="border-bottom border-2" >Instructions</h2>
+                            <p>Enter a starting value and a ending value. Press the button and the value will appear</p>
+
+                </div>
+                <div class="col-lg-8 col">
+                    <h5>Enter Values</h5>
+                    <form>
+                        
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
+
  <!-- ----Footer Section ---- -->
  <footer class="footer mt-auto py-3 bg-dark sticky-footer">
     <div class="container-fluid">
