--- a/code.html
+++ b/code.html
@@ -10,7 +10,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+<!-- ----Google Font---- -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 
     <link href="css/site.css" rel="stylesheet">
     <link href="css/prism.css" rel="stylesheet">
@@ -18,13 +21,15 @@
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link rel="icon" type="img/png" href="img/favicon-32x32.png">
 
+
+
 </head>
 
 <body class="d-flex flex-column h-100">
     <!-- ----Nav Section ---- -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/MDfull.png" height="30"
+            <a class="navbar-brand logoFont" href="#"><img src="img/MDfull.png" height="30"
                     class="d-inline-block align-text-top"> POURCENT</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +60,7 @@
     <!-- ----Main Section ---- -->
     <main class="flex-shrink-0">
         <div class="container px-5 py-5 mt-5">
-            <h2 class="border-1 border-bottom border-dark">The code for the app</h2>
+            <h2 class="border-1 border-bottom border-dark">The code for POURCENT</h2>
             <div class="row row-cols-1 row-cols-lg-2">
 
                 <div class="col-lg-8">
