--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Cent: A Coding Project By Mathieu Developer</title>
+    <title>POURCENT: A Coding Project By Mathieu Developer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,14 +14,19 @@
     <link href="css/site.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link rel="icon" type="img/png" href="img/favicon-32x32.png">
-
+    
+    <!-- ----Google Font---- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100">
     <!-- ----Nav Section ---- -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/MDfull.png" height="30" class="d-inline-block align-text-top"> POURCENT</a>
+            <a class="navbar-brand logoFont" href="#"><img src="img/MDfull.png" height="30"
+                    class="d-inline-block align-text-top"> POURCENT</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,22 +55,25 @@
     <!-- ----Main Section ---- -->
     <main class="flex-shrink-0">
         <div class="container col-xxl-8 px-4 py-5">
-            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2" >
+            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
                     <h1 display-5 fw-bold lh-1 mb-3>POURCENT: A Coding Project</h1>
-                    <h4 text="lead">Live life one loop at a time. A javascript coding exercise using loops.
-                         Write a program the displays numbers from 0 to 100. Disply the even number in<strong> BOLD</strong>.</h4>
+                    <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops.
+                        Write a program the displays numbers from 0 to 100. Disply the even number in<strong>
+                            BOLD</strong>.</h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap layout</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
-                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation
+                        </li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript If/Then/Else</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
                     </ul>
                     <div>
-                        <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It Out!</a>
+                        <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It
+                            Out!</a>
                     </div>
                     <h5 fw-bold mt-5>
                         <div class="d-flex mt-5">
@@ -79,7 +87,8 @@
                     </h5>
                 </div>
                 <div class="col">
-                    <img src="img/MDfull.png" alt="logo cent" class="img-fluid center-block d-block mx-auto" height="500" width="700">
+                    <img src="img/MDfull.png" alt="logo cent" class="img-fluid center-block d-block mx-auto"
+                        height="500" width="700">
                 </div>
             </div>
         </div>
@@ -96,9 +105,12 @@
                 </div>
                 <div class="col d-flex align-item-center justify-content-start justify-content-lg-end">
                     <div class="row">
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://github.com/MathieuDeveloper" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="#"><i class="fab fa-twitter fa-2x" target="_blank"></i></a></div>
+                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                        </div>
+                        <div class="col social"><a href="https://github.com/MathieuDeveloper" target="_blank"><i
+                                    class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="#"><i class="fab fa-twitter fa-2x" target="_blank"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -111,7 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
-    
+
 </body>
 
 </html>
