--- a/app.html
+++ b/app.html
@@ -10,10 +10,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<!-- ----Google Font---- -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
+    <!-- ----Google Font---- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 
     <link href="css/site.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
@@ -56,54 +56,74 @@
     <!-- ----Main Section ---- -->
     <main class="flex-shrink-0">
         <div class="container">
-            <div class="row row-cols-1 ro-cols-lg-2">
-                <div class="col-lg-4 col">
+            <div class="row row-cols-1 ro-cols-lg-2 mt-5">
+                <div class="col-lg-4 col border-end border-2">
                     <h2>POURCENT: A Coding Project</h2>
                     <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops.
                         Write a program the displays numbers from 0 to 100. Disply the even number in<strong>
                             BOLD.</strong></h4>
-                            <h2 class="border-bottom border-2" >Instructions</h2>
-                            <p>Enter a starting value and a ending value. Press the button and the value will appear</p>
+                    <h2 class="border-bottom border-2 mt-5">Instructions</h2>
+                    <p>Enter a starting value and a ending value. Press the button and the value will appear</p>
 
                 </div>
                 <div class="col-lg-8 col">
                     <h5>Enter Values</h5>
-                    <form>
-                        
+                    <form class="row gy-2 gx-3">
+                        <div class="col">
+                            <input class="form-control" type="number" id="startValue" placeholder="0">
+                        </div>
+                        <div class="col">
+                            <input class="form-control" type="number" id="endValue" placeholder="100">
+                        </div>
+                        <div class="col-12 d-flex justify-content-end">
+                            <button type="button" class="btn btn-dark btn-lg">Display</button>
+                        </div>
                     </form>
+                    <h2 class="mt-5 border-bottom border-2">Results</h2>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-sm">
+                            <tbody id="results">
+                                <!-- Results Go Here -->
+                            </tbody>
+                        </table>
+
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 
- <!-- ----Footer Section ---- -->
- <footer class="footer mt-auto py-3 bg-dark sticky-footer">
-    <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-lg-3 gy-2">
-            <div class="col text-light order-last order-lg-first">
-                <div><span class="text-muted">&copy;2021</span> Mathieu Developer | mdev@yahoo.fr</div>
-            </div>
-            <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                <img src="img/fullMathieuDeveloper.png" height="28" alt="Mathieu Developer Logo">
-            </div>
-            <div class="col d-flex align-item-center justify-content-start justify-content-lg-end">
-                <div class="row">
-                    <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                    <div class="col social"><a href="https://github.com/MathieuDeveloper" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                    <div class="col social"><a href="#"><i class="fab fa-twitter fa-2x" target="_blank"></i></a></div>
+    <!-- ----Footer Section ---- -->
+    <footer class="footer mt-auto py-3 bg-dark sticky-footer">
+        <div class="container-fluid">
+            <div class="row row-cols-1 row-cols-lg-3 gy-2">
+                <div class="col text-light order-last order-lg-first">
+                    <div><span class="text-muted">&copy;2021</span> Mathieu Developer | mdev@yahoo.fr</div>
+                </div>
+                <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
+                    <img src="img/fullMathieuDeveloper.png" height="28" alt="Mathieu Developer Logo">
+                </div>
+                <div class="col d-flex align-item-center justify-content-start justify-content-lg-end">
+                    <div class="row">
+                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                        </div>
+                        <div class="col social"><a href="https://github.com/MathieuDeveloper" target="_blank"><i
+                                    class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="#"><i class="fab fa-twitter fa-2x" target="_blank"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-</script>
-<script src="js/site.js"></script>
+    </footer>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+    </script>
+    <script src="js/site.js"></script>
 
 </body>
 
