--- a/app.html
+++ b/app.html
@@ -70,12 +70,12 @@
                     <h5>Enter Values</h5>
                     <form class="row gy-2 gx-3">
                         <div class="col">
-                            <input class="form-control" type="number" id="startValue" placeholder="Start Value"
-                            value=0 aria-label="Start Value">
+                            <input class="form-control" type="number" id="startValue" placeholder="Start Value" value=0
+                                aria-label="Start Value">
                         </div>
                         <div class="col">
-                            <input class="form-control" type="number" id="endValue" placeholder="End Value"
-                            value=100 aria-label="End Value">
+                            <input class="form-control" type="number" id="endValue" placeholder="End Value" value=100
+                                aria-label="End Value">
                         </div>
                         <div class="col-12 d-flex justify-content-end">
                             <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display</button>
@@ -126,7 +126,9 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/site.js"></script>
-    <script>document.getElementById("btnSubmit").addEventListener("click", getValues)</script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click", getValues)
+    </script>
 </body>
 
 </html>
