--- a/app.html
+++ b/app.html
@@ -127,7 +127,7 @@
     </script>
     <script src="js/site.js"></script>
     <script>
-        document.getElementById("btnSubmit").addEventListener("click", getValues)
+        document.getElementById("btnSubmit").addEventListener("click",getValues);
     </script>
 </body>
 
