--- a/app.html
+++ b/app.html
@@ -60,7 +60,7 @@
                 <div class="col-lg-4 col border-end border-2">
                     <h2>POURCENT: A Coding Project</h2>
                     <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops.
-                        Write a program the displays numbers from 0 to 100. Disply the even number in<strong>
+                        Write a program the displays numbers from 0 to 100. Display the even number in<strong>
                             BOLD.</strong></h4>
                     <h2 class="border-bottom border-2 mt-5">Instructions</h2>
                     <p>Enter a starting value and a ending value. Press the button and the value will appear</p>
