--- a/app.html
+++ b/app.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/MathieuDeveloper">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/MathieuDeveloper/POURCENT">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="#">About</a>
