--- a/code.html
+++ b/code.html
@@ -10,10 +10,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<!-- ----Google Font---- -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
+    <!-- ----Google Font---- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 
     <link href="css/site.css" rel="stylesheet">
     <link href="css/prism.css" rel="stylesheet">
@@ -47,7 +47,7 @@
                         <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/MathieuDeveloper">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/MathieuDeveloper/POURCENT">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="#">About</a>
@@ -65,17 +65,56 @@
 
                 <div class="col-lg-8">
                     <pre class="line-numbers"><code class="language-javascript">
-                        //Call Hello World
-                        function helloWorld() {
-                             alert("Hello World !");
-                        }
+// get values
+function getValues() {
+    let startValue = document.getElementById("startValue").value;
+    let endValue = document.getElementById("endValue").value;
+    // get integers
+    startValue = parseInt(startValue);
+    endValue = parseInt(endValue);
+if (Number.isInteger(startValue) && Number.isInteger(endValue)) {
+    let numbers = generateNumbers(startValue, endValue);
+    displayNumbers(numbers);
+} else {
+    alert("You must enter integers");
+}
+}
+// generate numbers
+function generateNumbers(sValue, eValue) {
+    let numbers = [];
+
+    for (let index = sValue; index <= eValue; index++) {
+        numbers.push(index);
+    }
+    return numbers;
+}
+// display numbers
+function displayNumbers(numbers) {
+    let templateRows = "";
+    let className = "";
+    for (let index = 0; index < numbers.length; index++) {
+        let number = numbers[index];
+        if (number % 2 == 0) {
+            className = "even";
+        } else {
+            className = "odd";
+        }
+        // Does not render well with prism, go for source code
+        templateRows += `<tr><td class="${className}">${number}</td></tr>`;
+    }
+    document.getElementById("results").innerHTML = templateRows;
+}
                 </code>
             </pre>
                 </div>
                 <div class="col-lg-4">
-                    <p>The code is structured in one function.</p>
-                    <h5>Hello World !</h5>
-                    <p>Hello Wolrd is a functon that displays an alert with the message Hello World !</p>
+                    <p>The code is structured in three functions.</p>
+                    <h5>1) getValues function</h5>
+                    <p>Get values from the HTML form.<br>Check values types.<br> Call the others functions.</p>
+                    <h5>2) generateNumbers function</h5>
+                    <p>Creates an array of integers.</p>
+                    <h5>3) displayNumbers function</h5>
+                    <p>Modifies the HTML document.<br>Adding a row for each number.<br>Styles the number.</p>
                 </div>
             </div>
         </div>
